# digital-theatre

./: LICENSE  README.md
backend/: alembic.ini  pyproject.toml  pytest.ini  verify_db.py
backend/migrations/: env.py
backend/migrations/versions/: 7e28face957a_initial_migration.py
backend/src/: config.py  database.py  main.py
backend/src/models/: __init__.py  audio.py  character.py  play.py
backend/src/routes/: audio.py  characters.py  play.py
backend/src/schemas/: play.py
backend/src/services/: play.py
backend/tests/: conftest.py
backend/tests/integrations/: test_api.py
backend/tests/unit/: test_models.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Home.tsx
frontend/src/components/common/: Layout.tsx
frontend/src/components/navigation/: Navbar.tsx
frontend/src/components/plays/: PlayList.tsx  PlayReader.tsx
frontend/src/services/: api.ts
